--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 .main {
     min-height: 100vh;
-    background: url('pexels-photo-707915.jpeg') no-repeat;
+    background: url('/img/pexels-photo-707915.jpeg') no-repeat;
     background-size: cover;
     background-position: center;
     pointer-events: auto;
@@ -203,7 +203,7 @@ body {
 }
 
 .quiz-section {
-    background: url('IMG_9771.png') no-repeat;
+    background: url('/img/IMG_9771.png') no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
@@ -417,6 +417,13 @@ body {
 
 .buttons button:nth-child(2) {
     background-color: rgba(255, 255, 255, 0);
+    cursor: pointer;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.buttons button:nth-child(2).active {
+    pointer-events: auto;
 }
 
 .buttons button:nth-child(1):hover {
@@ -425,4 +432,49 @@ body {
 
 .buttons button:nth-child(2):hover {
     background-color: rgba(255, 255, 255, 0.4);
+}
+
+.quiz-section .code-popup {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 600px;
+    background: gray;
+    border: 2px solid;
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: .5s ease;
+}
+
+.code-popup h2 {
+    padding: 10px;
+    border-radius: 20px;
+    border: 2px solid;
+    background: linear-gradient(45deg, transparent, rgb(0, 0, 0), transparent);
+}
+
+.code-popup .pieps2 {
+    height: 200px;
+}
+
+.code-popup .score-text {
+    display: flex;
+    font-size: 25px;
+    font-weight: 500;
+    align-items: center;
+    background: linear-gradient(45deg, transparent, rgb(0, 0, 0), transparent);
+    border: 2px solid;
+    border-radius: 20px;
+    padding: 5px;
+}
+
+
+.quiz-section .code-popup.active {
+    opacity: 1;
 }
