--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ body {
 }
 
 .buttons button:nth-child(2) {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 6, 6, 0.5);
     cursor: pointer;
     pointer-events: none;
     transition: 0.5s;
@@ -424,6 +424,11 @@ body {
 
 .buttons button:nth-child(2).active {
     pointer-events: auto;
+    background-color: rgba(85, 255, 6, 0.4);
+}
+
+.buttons button:nth-child(2).active:hover {
+    background-color: rgba(85, 255, 6, 0.7);
 }
 
 .buttons button:nth-child(1):hover {
@@ -431,7 +436,7 @@ body {
 }
 
 .buttons button:nth-child(2):hover {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 0, 0, 0.4);
 }
 
 .quiz-section .code-popup {
