--- a/blog_style.css
+++ b/blog_style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("../img/pexels-photo-707915.jpeg");
+    background-image: url("../pexels-photo-707915.jpeg");
     background-size: cover;
     background-attachment: fixed;
 }
