--- a/tools_style.css
+++ b/tools_style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("../pexels-photo-707915.jpeg");
+    background-image: url("../img/pexels-photo-707915.jpeg");
     background-size: cover;
     background-attachment: fixed;
 }
@@ -54,10 +54,127 @@ body {
     width: 70%;
     border-radius: 20px;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin-left: 15%;
     margin-right: 5px;
+    height: 100vh;
+}
+
+
+.center .center-field {
+    display: flex;
+    background-color: rgba(0, 255, 255, 0);
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.center button {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    background-color: rgba(251, 255, 0, 0.603);
+    font-weight: 500;
+    font-size: 24px;
+    justify-content: flex-start;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    padding: 10px;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.center button:hover {
+    background-color: rgba(255, 251, 0, 0.815);
+}
+
+.center .center-field .zoll-popup {
+    opacity: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(30deg, #ffffff98 0%, #da8910ea 6%, #fcf801c5 9%, #a4c921 12%, #ffae00ce 20%, #ffffffc5 25%, #fffb00d3 33%, #e26d0cab 54%, #ffc400c7 58%, #ffae0094 61%, #ffaf01be 73%, #ffe600e0 76%, #fd8700cb 84%, #d0ff00c2 93%, #fff 100%);
+    height: 400px;
+    border: 2px solid;
+    border-radius: 10px;
+    text-shadow: 4px 6px 6px rgba(0, 0, 0, 0.6);
+    transition: 1s;
+}
+
+.center .center-field .zoll-popup.active {
+    opacity: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(30deg, #ffffff98 0%, #da8910ea 6%, #fcf801c5 9%, #a4c921 12%, #ffae00ce 20%, #ffffffc5 25%, #fffb00d3 33%, #e26d0cab 54%, #ffc400c7 58%, #ffae0094 61%, #ffaf01be 73%, #ffe600e0 76%, #fd8700cb 84%, #d0ff00c2 93%, #fff 100%);
+    height: 400px;
+    border: 2px solid;
+    border-radius: 10px;
+    text-shadow: 4px 6px 6px rgba(0, 0, 0, 0.6);
+}
+
+
+.center .center-field .zoll-popup h1 {
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 10px;
+}
+
+.center .center-field .zoll-popup label {
+    background-color: rgba(255, 255, 255, 0.699);
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.center .center-field .zoll-popup-inp {
+    background-color: rgba(255, 255, 255, 0.699);
+    margin: 5px;
+    padding: 5px;
+    border: 2px solid;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.center .center-field .umrechnung-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.center .center-field .umrechnung-btn button {
+    background-color: rgba(255, 255, 0, 0.39);
+    margin: 10px;
+    font-size: 15px;
+}
+
+.center .center-field .umrechnung-btn button:hover {
+    background-color: #178b00;
+}
+
+.center .center-field .close-btn {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin: 50px;
+    transition: 1s;
+}
+
+.center .center-field .close-btn:hover {
+    background-color: rgba(255, 0, 0, 0.699);
 }
 
 
