--- a/blog_style.css
+++ b/blog_style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("../pexels-photo-707915.jpeg");
+    background-image: url("../img/pexels-photo-707915.jpeg");
     background-size: cover;
     background-attachment: fixed;
 }
@@ -97,6 +97,11 @@ body {
 .content .center .fild-news p {
     margin: auto;
     padding: 20px;
+}
+
+.content .center .fild-news h4 {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .menue-right-container {
