--- a/news.css
+++ b/news.css
@@ -1,12 +1,16 @@
 body {
-    overflow: auto;
     background: url("../../src/IMG_9771.png");
     background-size: cover;
     background-attachment: fixed;
 }
 
+#nav {
+    position: fixed;
+    min-width: 100vw;
+}
 
 .news-container {
+    overflow-y: auto;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -58,3 +62,25 @@ body {
     padding-bottom: 100px;
     text-shadow: 2px 2px 2px black;
 }
+
+
+
+::-webkit-scrollbar {
+    width: 0px; /* Chrome, Safari, Opera */
+    height: 0px;
+  }
+  
+  /* Farbe der Scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background-color: #88888800; /* Farbe des Scrollbalkens */
+  }
+  
+  /* Farbe bei Mouse-Over */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #55555500; /* Farbe des Scrollbalkens bei Mouse-Over */
+  }
+  
+  /* Hintergrundfarbe der Scrollbar */
+  ::-webkit-scrollbar-track {
+    background-color: #3a3a3a00; /* Hintergrundfarbe der Scrollbar */
+  }
