--- a/tools_style.css
+++ b/tools_style.css
@@ -1,4 +1,5 @@
 * {
+    overflow: hidden;
     padding: 0px;
     margin: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
