--- a/styles/basic.css
+++ b/styles/basic.css
@@ -137,6 +137,9 @@ h3 {
 
 /*<----Media Query Header---->*/
 @media (max-width: 730px) {
+    .header {
+        grid-template-columns: 2fr 1fr 80px;
+    }
     .header-text {
         font-size: 1.5rem;
     }
