--- a/styles/index.css
+++ b/styles/index.css
@@ -35,6 +35,8 @@
 
 .tech-heading {
     display: grid;
+    margin-right: 20%;
+    margin-left: 20%;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-row-gap: 10px;
@@ -65,6 +67,8 @@
 .philosophie-text {
     display: flex;
     flex-direction: column;
+    margin-right: 20%;
+    margin-left: 20%;
     gap: 20px;
     grid-area: philosophie;
     font-size: 1.2rem;
@@ -86,6 +90,32 @@
     padding: 0px;
     margin: 0px;
     align-self: center;
+}
+
+.img {
+    width: 80px;
+}
+
+.box {
+    opacity: 0;
+}
+
+.box.visible {
+    opacity: 1;
+    animation: fandeIn;
+}
+
+
+
+@media (max-width: 1400px) {
+    .tech-heading {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    .philosophie-text {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
 }
 
 .img {
