--- a/styles/projects.css
+++ b/styles/projects.css
@@ -6,7 +6,7 @@
 }
 
 .main-content {
-    margin: 50px;
+    margin: 30px;
     margin-left: 20%;
     margin-right: 20%;
     padding: 20px;
@@ -21,10 +21,35 @@
     column-gap: 10px;
 }
 
+.main-content.active {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+}
+
+.main-content.inactive {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
 .main-content-text {
     filter: drop-shadow(2px 2px 8px black);
 }
 
 .main-content-sub img {
+    box-shadow: var(--boxShadow);
     max-width: 100%;
+}
+
+@media (max-width: 1400px) {
+    .main-content {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+@media (max-width: 700px) {
+    .main-content {
+        grid-template-columns: 1fr;
+        row-gap: 20px;
+    }
 }
