--- a/styles/index.css
+++ b/styles/index.css
@@ -54,6 +54,10 @@
     transform: scale(1.3);
 }
 
+.tech-heading-item a img {
+    filter: drop-shadow(4px 4px 4px rgb(50, 50, 50));
+}
+
 .tech-heading-item:nth-child(1) {animation-delay: 1s;}
 .tech-heading-item:nth-child(2) {animation-delay: 1.5s;}
 .tech-heading-item:nth-child(3) {animation-delay: 2s;}
