--- a/styles/info.css
+++ b/styles/info.css
@@ -59,7 +59,15 @@
 }
 
 .info h3 {
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+}
+
+@media (max-width: 1750px) {
+    .info h3 {
+        margin-bottom: 30px;
+        font-size: 1.3rem;
+    }
 }
 
 @media (max-width: 1500px) {
@@ -69,14 +77,19 @@
     }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1300px) {
     .personal-info {
         margin-left: 5%;
         margin-right: 5%;
     }
 }
 
-
+@media (max-width: 1100px) {
+    .info h3 {
+        margin-bottom: 30px;
+        font-size: 1.2rem;
+    }
+}
 
 @media (max-width: 900px) {
     .personal-info {
@@ -92,5 +105,99 @@
         transform: rotateX(0deg) rotateY(0deg);
         box-shadow: 2px 2px 10px black;
     }
+
+    .info h3 {
+        margin-bottom: 30px;
+        font-size: 1.5rem;
+    }
     
+}
+
+.cube-box {
+    display: grid;
+    height: 500px;
+    grid-template-columns: repeat(1, 1fr);
+    perspective: 2000px;
+}
+
+.cube1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    transform-style: preserve-3d;
+    transform: translate(-50%, -50%) rotateX(-30deg) rotateY(-45deg);
+}
+
+.cube1 .face {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background: rgba(68, 68, 68, 0.9);
+    border: 1px solid #ccc;
+}
+
+.cube1 .front  { transform: translateZ(100px); transition: 2s;}
+.cube1 .back   { transform: rotateY(180deg) translateZ(100px); transition: 2s;}
+.cube1 .right  { transform: rotateY(90deg) translateZ(100px); transition: 2s;}
+.cube1 .left   { transform: rotateY(-90deg) translateZ(100px); transition: 2s;}
+.cube1 .top    { transform: rotateX(90deg) translateZ(100px); transition: 2s;}
+.cube1 .bottom { transform: rotateX(-90deg) translateZ(100px); transition: 2s;}
+
+.cube1 {
+    animation-delay: 2s;
+    animation-name: rotate;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    transition: .3s;
+}
+
+
+.cube1.active .front {
+    transform: translateZ(50px)
+}
+.cube1.active .back {
+    transform: rotateY(180deg) translateZ(50px);
+}
+.cube1.active .right {
+    transform: rotateY(90deg) translateZ(50px);
+}
+.cube1.active .left {
+    transform: rotateY(-90deg) translateZ(50px);
+}
+.cube1.active .top {
+    transform: rotateX(90deg) translateZ(50px);
+}
+.cube1.active .bottom {
+    transform: rotateX(-90deg) translateZ(50px);
+}
+
+.cube1.flipp .face {
+    transform: translateX(-250px) rotateY(90deg) rotateZ(-360deg);
+}
+
+.cube1.flipp .front {
+    transform: translateZ(250px) rotateY(180deg) rotateX(360deg);
+}
+.cube1.flipp .back {
+    transform: rotateY(180deg) translateZ(250px) rotateX(360deg);
+}
+.cube1.flipp .right {
+    transform: rotateY(90deg) translateZ(250px) rotateX(360deg);
+}
+.cube1.flipp .left {
+    transform: rotateY(-90deg) translateZ(250px rotateX(360deg));
+}
+.cube1.flipp .top {
+    transform: rotateX(90deg) translateZ(250px) rotateX(360deg);
+}
+.cube1.flipp .bottom {
+    transform: rotateX(-90deg) translateZ(250px) rotateX(360deg);
+}
+
+@keyframes rotate {
+    from { transform: translate(-50%, -50%) rotateX(-30deg) rotateY(-45deg); }
+    to { transform: translate(-50%, -50%) rotateX(-30deg) rotateY(315deg); }
 }
