--- a/styles/cube.css
+++ b/styles/cube.css
@@ -41,47 +41,21 @@
     transition: .3s;
 }
 
-.cube1.active .front {
-    transform: translateZ(50px)
-}
-.cube1.active .back {
-    transform: rotateY(180deg) translateZ(50px);
-}
-.cube1.active .right {
-    transform: rotateY(90deg) translateZ(50px);
-}
-.cube1.active .left {
-    transform: rotateY(-90deg) translateZ(50px);
-}
-.cube1.active .top {
-    transform: rotateX(90deg) translateZ(50px);
-}
-.cube1.active .bottom {
-    transform: rotateX(-90deg) translateZ(50px);
-}
+.cube1.active .front { transform: translateZ(50px); }
+.cube1.active .back { transform: rotateY(180deg) translateZ(50px); }
+.cube1.active .right { transform: rotateY(90deg) translateZ(50px); }
+.cube1.active .left { transform: rotateY(-90deg) translateZ(50px); }
+.cube1.active .top { transform: rotateX(90deg) translateZ(50px); }
+.cube1.active .bottom { transform: rotateX(-90deg) translateZ(50px); }
 
-.cube1.flipp .face {
-    transform: translateX(-150px) rotateY(90deg);
-}
 
-.cube1.flipp .front {
-    transform: translateZ(150px) rotateY(180deg) rotateX(360deg);
-}
-.cube1.flipp .back {
-    transform: rotateY(180deg) translateZ(150px) rotateX(360deg);
-}
-.cube1.flipp .right {
-    transform: rotateY(90deg) translateZ(150px) rotateX(360deg);
-}
-.cube1.flipp .left {
-    transform: rotateY(-90deg) translateZ(150px rotateX(360deg));
-}
-.cube1.flipp .top {
-    transform: rotateX(90deg) translateZ(150px) rotateX(360deg);
-}
-.cube1.flipp .bottom {
-    transform: rotateX(-90deg) translateZ(150px) rotateX(360deg);
-}
+.cube1.flipp .face { transform: translateX(-150px) rotateY(90deg); }
+.cube1.flipp .front { transform: translateZ(150px) rotateY(180deg) rotateX(360deg); }
+.cube1.flipp .back { transform: rotateY(180deg) translateZ(150px) rotateX(360deg); }
+.cube1.flipp .right { transform: rotateY(90deg) translateZ(150px) rotateX(360deg); }
+.cube1.flipp .left { transform: rotateY(-90deg) translateZ(150px rotateX(360deg)); }
+.cube1.flipp .top { transform: rotateX(90deg) translateZ(150px) rotateX(360deg); }
+.cube1.flipp .bottom { transform: rotateX(-90deg) translateZ(150px) rotateX(360deg); }
 
 @keyframes rotate {
     from { transform: translate(-50%, -50%) rotateX(-30deg) rotateY(-45deg); }
