--- a/demoprojects/TheSun/styles/basic.css
+++ b/demoprojects/TheSun/styles/basic.css
@@ -27,3 +27,21 @@ body {
     background: rgb(0, 0, 0);
     overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 0px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #444444a8;
+    border-radius: 20px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #02020200;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #3a3a3a00;
+  }
