--- a/demoprojects/TheSun/styles/index.css
+++ b/demoprojects/TheSun/styles/index.css
@@ -34,23 +34,26 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 445px;
-    width: 445px;
+    height: 450px;
+    width: 450px;
     border-radius: 100%;
     background-color: rgb(255, 123, 0);
     box-shadow: 0px 0px 10px red , 10px 10px 10px red inset, -10px -10px 10px red inset;
+    animation: rotateRight 120s infinite;
 }
 
 .circle3 {
     position: absolute;
     top: 50%;
     left: 50%;
+    background-image: url('../logos/Solarsystemscope_texture_8k_sun.jpg');
     transform: translate(-50%, -50%);
-    height: 380px;
-    width: 380px;
+    height: 430px;
+    width: 430px;
     border-radius: 100%;
     background-color: rgb(255, 238, 0);
     box-shadow: 0px 0px 10px orange , 10px 10px 10px orange inset, -10px -10px 10px orange;
+    animation: rotateLeft 120s infinite;
 }
 
 .circle1, .circle2, .circle3 {
@@ -64,3 +67,16 @@ svg {
     visibility: hidden;
 }
 
+@keyframes rotateLeft {
+    from { transform: translate(-50%, -50%) rotateZ(0deg); }
+    to { transform: translate(-50%, -50%) rotateZ(-360deg); }
+}
+
+@keyframes rotateRight {
+    from { transform: translate(-50%, -50%) rotateZ(0deg); }
+    to { transform: translate(-50%, -50%) rotateZ(360deg); }
+}
+
+@media (max-width: 450px) {
+    
+}
