--- a/styles/cube.css
+++ b/styles/cube.css
@@ -3,7 +3,7 @@
     height: 400px;
     grid-template-columns: repeat(1, 1fr);
     perspective: 2000px;
-    animation: slideInLeft 2s ease-in;
+    animation: scaleIn 2s normal forwards;
 }
 
 .cube1 {
@@ -60,4 +60,15 @@
 @keyframes rotate {
     from { transform: translate(-50%, -50%) rotateX(-30deg) rotateY(-45deg); }
     to { transform: translate(-50%, -50%) rotateX(-30deg) rotateY(315deg); }
+}
+
+@keyframes scaleIn {
+    from { 
+        opacity: 0;
+        transform: scale(0);
+    }
+    to { 
+        opacity: 1;
+        transform: scale(1);
+    }
 }
