--- a/demoprojects/TheSun/styles/index.css
+++ b/demoprojects/TheSun/styles/index.css
@@ -11,17 +11,17 @@
 
 .main {
     display: grid;
-    grid-template-columns: 1fr;
-    height: 80vh;
-    width: 100vw;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    grid-template-columns: repeat(3, 1fr);
 }
 
+.layer1 {
+    display: grid;
+    grid-template-columns: 1fr;
+}
 
 .circle1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     height: 450px;
     width: 450px;
     border-radius: 100%;
@@ -29,11 +29,13 @@
     box-shadow: 0px 0px 10px red, 10px 10px 50px red, -10px -10px 50px red;
 }
 
+.layer2 {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+}
+
 .circle2 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     height: 450px;
     width: 450px;
     border-radius: 100%;
@@ -42,12 +44,13 @@
     animation: rotateRight 120s infinite;
 }
 
+.layer3 {
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
 .circle3 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     background-image: url('../logos/Solarsystemscope_texture_8k_sun.jpg');
-    transform: translate(-50%, -50%);
     height: 430px;
     width: 430px;
     border-radius: 100%;
@@ -68,13 +71,13 @@ svg {
 }
 
 @keyframes rotateLeft {
-    from { transform: translate(-50%, -50%) rotateZ(0deg); }
-    to { transform: translate(-50%, -50%) rotateZ(-360deg); }
+    from { transform: rotateZ(0deg); }
+    to { transform: rotateZ(-360deg); }
 }
 
 @keyframes rotateRight {
-    from { transform: translate(-50%, -50%) rotateZ(0deg); }
-    to { transform: translate(-50%, -50%) rotateZ(360deg); }
+    from { transform: rotateZ(0deg); }
+    to { transform: rotateZ(360deg); }
 }
 
 @media (max-width: 450px) {
