--- a/demoprojects/TheSun/styles/heading.css
+++ b/demoprojects/TheSun/styles/heading.css
@@ -122,6 +122,6 @@
 @media (max-width: 750px) {
     .navigation {
         display: grid;
-        grid-template-columns: .1fr 4fr 1fr;
+        grid-template-columns: 1fr 4fr 1fr;
     }
 }
