--- a/demoprojects/TheSun/styles/index.css
+++ b/demoprojects/TheSun/styles/index.css
@@ -16,23 +16,12 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
-.layer1 {
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
 .circle1 {
     height: 450px;
     width: 450px;
     border-radius: 100%;
     background-color: rgb(255, 51, 0);
     box-shadow: 0px 0px 10px red, 10px 10px 50px red, -10px -10px 50px red;
-}
-
-.layer2 {
-    display: grid;
-    width: 100%;
-    grid-template-columns: 1fr;
 }
 
 .circle2 {
@@ -42,11 +31,6 @@
     background-color: rgb(255, 123, 0);
     box-shadow: 0px 0px 10px red , 10px 10px 10px red inset, -10px -10px 10px red inset;
     animation: rotateRight 120s infinite;
-}
-
-.layer3 {
-    display: grid;
-    grid-template-columns: 1fr;
 }
 
 .circle3 {
@@ -81,5 +65,16 @@ svg {
 }
 
 @media (max-width: 450px) {
-    
+    .circle1 {
+        height: 250px;
+        width: 250px;
+    }
+    .circle2 {
+        height: 250px;
+        width: 250px;
+    }
+    .circle3 {
+        height: 230px;
+        width: 230px;
+    }
 }
