--- a/demoprojects/TheSun/styles/basic.css
+++ b/demoprojects/TheSun/styles/basic.css
@@ -28,6 +28,41 @@ body {
     overflow-x: hidden;
 }
 
+h1 {
+  font-family: var(--headingFont);
+    font-size: 2rem;
+    color: yellow;
+  }
+  
+  h2 {
+    font-family: var(--textFont);
+    font-size: 2rem;
+    margin-bottom: 20px;
+}
+
+p {
+  font-family: var(--textFont);
+  font-size: 1rem;
+  margin-bottom: 20px;
+}
+
+.line {
+  margin: 5px;
+  height: 3px;
+  width: 50%;
+  border-radius: 100%;
+  background-color: rgb(98, 255, 98);
+  box-shadow: 0px 2px 8px yellow;
+}
+
+.vertical-line {
+  margin-left: 50%;
+  height: 100px;
+  width: 3px;
+  border-radius: 100%;
+  background-color: rgb(98, 255, 98);
+}
+
 ::-webkit-scrollbar {
     width: 5px;
     height: 0px;
