--- a/demoprojects/TheSun/styles/index.css
+++ b/demoprojects/TheSun/styles/index.css
@@ -1,19 +1,17 @@
 @import url('./basic.css');
 @import url('./heading.css');
 
-.line {
-    margin: 5px;
-    height: 2px;
-    width: 70%;
-    background-color: rgb(98, 255, 98);
-    box-shadow: 0px 2px 8px yellow;
-}
-
 .main {
     display: grid;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     grid-template-columns: repeat(3, 1fr);
+}
+
+.layer1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .circle1 {
@@ -54,6 +52,26 @@ svg {
     visibility: hidden;
 }
 
+.opening {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    margin-right: 30%;
+    margin-left: 30%;
+}
+
+.opening-container {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.heading {
+    margin-top: 50px;
+}
+
 @keyframes rotateLeft {
     from { transform: rotateZ(0deg); }
     to { transform: rotateZ(-360deg); }
@@ -62,6 +80,13 @@ svg {
 @keyframes rotateRight {
     from { transform: rotateZ(0deg); }
     to { transform: rotateZ(360deg); }
+}
+
+@media (max-width: 1200px) {
+    .opening {
+        margin-right: 20%;
+        margin-left: 20%;
+    }
 }
 
 @media (max-width: 450px) {
@@ -76,5 +101,9 @@ svg {
     .circle3 {
         height: 300px;
         width: 300px;
+    }
+    .opening {
+        margin-left: 5%;
+        margin-right: 5%;
     }
 }
