--- a/demoprojects/TheSun/styles/index.css
+++ b/demoprojects/TheSun/styles/index.css
@@ -19,7 +19,13 @@
     width: 450px;
     border-radius: 100%;
     background-color: rgb(255, 51, 0);
-    box-shadow: 0px 0px 10px red, 10px 10px 50px red, -10px -10px 50px red;
+    box-shadow: 0px 0px 10px red, 0px 0px 50px red, 0px 0px 50px red;
+}
+
+.layer2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .circle2 {
@@ -27,8 +33,14 @@
     width: 450px;
     border-radius: 100%;
     background-color: rgb(255, 123, 0);
-    box-shadow: 0px 0px 10px red , 10px 10px 10px red inset, -10px -10px 10px red inset;
+    box-shadow: 0px 0px 10px red , 0px 0px 10px red inset, 0px 0px 10px red inset;
     animation: rotateRight 120s infinite;
+}
+
+.layer3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .circle3 {
@@ -37,7 +49,7 @@
     width: 430px;
     border-radius: 100%;
     background-color: rgb(255, 238, 0);
-    box-shadow: 0px 0px 10px orange , 10px 10px 10px orange inset, -10px -10px 10px orange;
+    box-shadow: 0px 0px 10px orange , 0px 0px 10px orange inset, 0px 0px 10px orange;
     animation: rotateLeft 120s infinite;
 }
 
